--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 }
 #startButton {
     margin: 0;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
